--- a/memoria/Bibliografia.bib
+++ b/memoria/Bibliografia.bib
@@ -55,7 +55,67 @@ howpublished = {\url{www.mixamo.com}}
       archivePrefix={arXiv},
       primaryClass={cs.CV}
 }
+@article{OpenImages,
+  author = {Alina Kuznetsova and Hassan Rom and Neil Alldrin and Jasper Uijlings and Ivan Krasin and Jordi Pont-Tuset and Shahab Kamali and Stefan Popov and Matteo Malloci and Alexander Kolesnikov and Tom Duerig and Vittorio Ferrari},
+  title = {The Open Images Dataset V4: Unified image classification, object detection, and visual relationship detection at scale},
+  year = {2020},
+  journal = {IJCV}
+}
 
+@phdthesis{tesis_rigoberto,
+  author = "{Rigoberto Vizcay}",
+	title = "{Deep Learning para la Detección de Peatones y Vehículos sobre FPGA}",
+	year = 2018,
+	school = {Centro Universitario UAEM Valle de México},
+		howpublished = {\url{http://ri.uaemex.mx/bitstream/handle/20.500.11799/70995/tesisfinalRVC-ilovepdf-compressed%20%281%29.pdf?sequence=1&isAllowed=y}},
+	note = "[Accedido  22 de Junio de 2019]"
+}
+
+@article{rcnn_detection,
+    author = "{Y. Abdullah, G. Mehmet, A. Iman and B. Erkan} ",
+	title = "{A Vehicle Detection Approach using Deep Learning Methodologies}",
+	journal ="{Computer Engineering Department Ankara University}",
+	year = "2018"
+}
+
+@phdthesis{tesis_ignacio_arriola,
+  author = "{Ignacio Arriola}",
+	title = "{Detección de objetos basada en Deep Learning
+y aplicada a vehículos autónomos}",
+	year = 2018,
+	school = {Universidad del País Vasco. Ingeniería computacional y sistemas inteligentes}
+}
+@article{faster_rcnn_ignacio,
+    author = "{Shaoqing Ren, Kaiming He, Ross Girshick, and Jian Sun}",
+	title = "{Faster r-cnn: Towards real-time object detection with region proposal networks}",
+    journal = "In Advances in neural information processing
+systems",
+    year = "2015",
+    pages= {91-99}
+}
+
+@article{faster_rcnn_regnet_ignacio,
+    author = "{Kaiming He, Xiangyu Zhang, Shaoqing Ren, and Jian Sun}",
+	title = "{Deep residual learning for image recognition}",
+    journal = "In Proceedings of the IEEE conference on computer vision and pattern recognition",
+    year = "2016",
+    pages= {770-778}
+}
+
+
+@misc{pascal-voc-2012,
+    author = "Everingham, M. and Van~Gool, L. and Williams, C. K. I. and Winn, J. and Zisserman, A.",
+    title = "The {PASCAL} {V}isual {O}bject {C}lasses {C}hallenge 2012 {(VOC2012)} {R}esults",
+    howpublished = "http://www.pascal-network.org/challenges/VOC/voc2012/workshop/index.html"}
+
+@misc{cocodataset,
+      title={Microsoft COCO: Common Objects in Context}, 
+      author={Tsung-Yi Lin and Michael Maire and Serge Belongie and Lubomir Bourdev and Ross Girshick and James Hays and Pietro Perona and Deva Ramanan and C. Lawrence Zitnick and Piotr Dollár},
+      year={2015},
+      eprint={1405.0312},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
 
 
 @phdthesis{nacho_tfg,
