--- a/memoria/capitulos/0-Acronimos.tex
+++ b/memoria/capitulos/0-Acronimos.tex
@@ -2,7 +2,7 @@
 \newacronym{gui}{GUI}{Graphical User Interface}
 \newacronym{va}{VA}{Visión Artificial}
 \newacronym{fpn}{FPN}{Feature Pyramid Networks}
-\newacronym{ssd}{SSD}{Single Shot MultiBox Detector}
+\newacronym{ssd}{SSD}{Single Shot Detector}
 \newacronym{ia}{IA}{Inteligencia Artificial}
 \newacronym{fps}{FPS}{Frames Per Second}
 \newacronym{nms}{NMS}{Non-Maximum Suppression}
@@ -10,3 +10,9 @@
 \newacronym{tfm}{TFM}{Trabajo de Fin de Máster}
 \newacronym{cuda}{CUDA}{Compute Unified Device Architecture}
 \newacronym{opencv}{OpenCV}{Open Source Computer  Vision Library}
+\newacronym{coco}{COCO}{Common Objects in Context}
+\newacronym{rcnn}{R-CNN}{Region-based Convolutional Neural Network}
+\newacronym{cnn}{CNN}{Convolutional Neural Network}
+\newacronym{svm}{SVM}{Support Vector Machine}
+\newacronym{voc}{VOC}{PASCAL Visual Object Classes Challenge}
+\newacronym{sdk}{SDK}{software development kit}
