--- a/memoria/capitulos/4-Herramientas.tex
+++ b/memoria/capitulos/4-Herramientas.tex
@@ -1,10 +1,10 @@
-\chapter{Herramientas utilizadas}\label{cap.infraestructura}
+\chapter{Herramientas utilizadas}\label{cap.herramientas}
 EL objetivo de este trabajo es preparar la infraestructura para desarrollar prácticas de visión con drones en la plataforma Kibotics\cite{kibotics} tanto con drone real como simulado. Para ello se han necesitado las siguientes herramientas.
 
 \section{Kibotics}
-\textit{Kibotics}\cite{kibotics} es una plataforma de enseñanza de robótica infantil desarrollada por las Asociación de robótica JdeRobot\footnote{https://jderobot.github.io}
+\textit{Kibotics}~\cite{kibotics} es una plataforma de enseñanza de robótica infantil desarrollada por las Asociación de robótica JdeRobot\footnote{https://jderobot.github.io}
 
-La batería de ejercicios(figura \ref{fig:kibotics2}) que incluye el entorno \textit{Kibotics}\cite{kibotics} se simula usando el simulador robótico \textit{Websim}. Se trata de un simulador diseñado para el aprendizaje de conceptos básicos de programación de robots especialmente para niños. 
+La batería de ejercicios(figura \ref{fig:kibotics2}) que incluye el entorno \textit{Kibotics}~\cite{kibotics} se simula usando el simulador robótico \textit{Websim}. Se trata de un simulador diseñado para el aprendizaje de conceptos básicos de programación de robots especialmente para niños. 
 \begin{figure}[H]
   \begin{center}
     \includegraphics[width=0.6\textwidth]{figures/herramientas/kibotics2.png}
@@ -83,7 +83,7 @@ Es un pequeño drone (figura \ref{fig:tello}) fabricado por la empresa DJI \foot
 		\end{center}
 \end{figure}
 \section{Mixamo}
-\textit{Mixamo}\cite{mixamo} es una empresa del grupo \textit{Adobe Systems} que desarrolla y vende servicios basados en la web para la animación de personajes en 3D. Utilizan métodos de \textit{Machine Learning} para automatizar los pasos del proceso de animación de personajes, incluyendo desde el modelado 3D hasta la animación 3D. Desde su web ofrecen modelos y animaciones gratuitos (\ref{fig.mixamo}).
+\textit{Mixamo}~\cite{mixamo} es una empresa del grupo \textit{Adobe Systems} que desarrolla y vende servicios basados en la web para la animación de personajes en 3D. Utilizan métodos de \textit{Machine Learning} para automatizar los pasos del proceso de animación de personajes, incluyendo desde el modelado 3D hasta la animación 3D. Desde su web ofrecen modelos y animaciones gratuitos (\ref{fig.mixamo}).
 \begin{figure}[H]
   \begin{center}
     \includegraphics[width=0.6\textwidth]{figures/herramientas/mixamo.png}
@@ -105,7 +105,7 @@ Inicialmente fue distribuido de forma gratuita pero sin el código fuente. Poste
 \end{figure}
 En este \acrshort{tfm} se ha usado para modificar los modelos extraídos de \textit{Mixamo}
 \section{LabelMe}
-\textit{LabelMe}\cite{labelme} es un proyecto creado por el Laboratorio de Ciencias de la Computación e Inteligencia Artificial del MIT (CSAIL) que proporciona un conjunto de datos de imágenes digitales con anotaciones. Además también tiene una herramienta de etiquetado\ref{fig:labelme} de \textit{datasets} que permite subir tu propio \textit{dataset} a un servidor para poder etiquetar cada imagen desde el navegador.
+\textit{LabelMe}~\cite{labelme} es un proyecto creado por el Laboratorio de Ciencias de la Computación e Inteligencia Artificial del MIT (CSAIL) que proporciona un conjunto de datos de imágenes digitales con anotaciones. Además también tiene una herramienta de etiquetado\ref{fig:labelme} de \textit{datasets} que permite subir tu propio \textit{dataset} a un servidor para poder etiquetar cada imagen desde el navegador.
 \begin{figure}[H]
   \begin{center}
     \includegraphics[width=0.6\textwidth]{figures/herramientas/labelme.png}
