--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper, 12pt, oneside]{book}
 
 \usepackage[utf8]{inputenc}
-\usepackage{lmodern}
+\usepackage{lmodern, textcomp}
 \usepackage{layout}
 \usepackage{emptypage}
 \usepackage{fancyhdr}
